[gd_scene load_steps=5 format=3 uid="uid://b0jxwr5guftih"]

[ext_resource type="Script" path="res://Main Interface/MainInterface.gd" id="1_d6kfn"]
[ext_resource type="Script" path="res://Main Interface/NoiseImageGenerator.gd" id="2_v3hyi"]
[ext_resource type="PackedScene" uid="uid://cm25jyq7u8dge" path="res://Interface Addons/noise_type_container.tscn" id="3_dqc6v"]
[ext_resource type="PackedScene" uid="uid://da5iu45l3s3qp" path="res://Interface Addons/seed_container.tscn" id="4_2cwsj"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="MainInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_d6kfn")

[node name="NoiseImageGenerator" type="Node" parent="MainInterface"]
script = ExtResource("2_v3hyi")
width = 500
height = 500

[node name="HBoxContainer" type="HBoxContainer" parent="MainInterface"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="MainInterface/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
drag_to_rearrange_enabled = true

[node name="Properties" type="TabBar" parent="MainInterface/HBoxContainer/TabContainer"]
clip_contents = true
layout_mode = 2
drag_to_rearrange_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuTitle" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Noise Properties"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NoiseTypeContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer" instance=ExtResource("3_dqc6v")]
layout_mode = 2

[node name="WidthContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WidthLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/WidthContainer"]
layout_mode = 2
text = " Width"

[node name="WidthLineEdit" type="LineEdit" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/WidthContainer"]
layout_mode = 2
virtual_keyboard_type = 2

[node name="HeightContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HeightLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/HeightContainer"]
layout_mode = 2
text = "Height"

[node name="HeightLineEdit" type="LineEdit" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/HeightContainer"]
layout_mode = 2
virtual_keyboard_type = 2

[node name="SeedContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer" instance=ExtResource("4_2cwsj")]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="AmplitudeContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AmplitudeLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/AmplitudeContainer"]
layout_mode = 2
text = "Amplitude
"

[node name="AmplitudeSlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/AmplitudeContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 5.0
step = 0.001
value = 1.0

[node name="AmplitudeValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/AmplitudeContainer"]
clip_contents = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "1"

[node name="FrequencyContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FrequencyLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/FrequencyContainer"]
layout_mode = 2
text = "Frequency"

[node name="FrequencySlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/FrequencyContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 0.5
step = 0.0
value = 0.01

[node name="FrequencyValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/FrequencyContainer"]
clip_contents = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "0.1"

[node name="OctavesContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OctavesLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OctavesContainer"]
layout_mode = 2
text = "Octaves"

[node name="OctavesSlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OctavesContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="OctavesValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OctavesContainer"]
clip_contents = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "1"

[node name="PersistenceContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PersistenceLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/PersistenceContainer"]
layout_mode = 2
text = "Persistence"

[node name="PersistenceSlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/PersistenceContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -4.0
max_value = 4.0
step = 0.001

[node name="PersistenceValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/PersistenceContainer"]
clip_contents = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "0.5"

[node name="LacunarityContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LacunarityLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/LacunarityContainer"]
layout_mode = 2
text = "Lacunarity"

[node name="LacunaritySlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/LacunarityContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="LacunarityValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/LacunarityContainer"]
clip_contents = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
text = "0.5"

[node name="OffsetContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OffsetLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
layout_mode = 2
text = "Offset"

[node name="XLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
layout_mode = 2
text = "x:"

[node name="XSlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1000.0

[node name="XOffsetValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
clip_contents = true
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
text = "0
"

[node name="VSeparator" type="VSeparator" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
layout_mode = 2

[node name="YLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
layout_mode = 2
text = "y:"

[node name="YSlider" type="HSlider" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1000.0

[node name="YOffsetValueLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer"]
clip_contents = true
custom_minimum_size = Vector2(38, 0)
layout_mode = 2
text = "0"

[node name="InvertedContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="InvertedLabel" type="Label" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/InvertedContainer"]
layout_mode = 2
text = "Inverted"

[node name="InvertedCheckBox" type="CheckBox" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/InvertedContainer"]
layout_mode = 2
action_mode = 0

[node name="HSeparator3" type="HSeparator" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="SavePngContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SavePngButton" type="Button" parent="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/SavePngContainer"]
layout_mode = 2
text = "Save Image .png"

[node name="Color" type="TabBar" parent="MainInterface/HBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Color"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="ColorInterfaceContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorListContainer" type="VBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer/ColorInterfaceContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer"]
layout_mode = 2

[node name="AddColorButton" type="Button" parent="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Color"

[node name="Control" type="Control" parent="MainInterface/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MainInterface/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[connection signal="update_noise" from="MainInterface" to="MainInterface/NoiseImageGenerator" method="_update_noise"]
[connection signal="item_selected" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/NoiseTypeContainer/NoiseTypeOptionButton" to="MainInterface/NoiseImageGenerator" method="_noise_type_changed"]
[connection signal="text_submitted" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/WidthContainer/WidthLineEdit" to="MainInterface/NoiseImageGenerator" method="_width_changed"]
[connection signal="text_submitted" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/HeightContainer/HeightLineEdit" to="MainInterface/NoiseImageGenerator" method="_height_changed"]
[connection signal="text_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/SeedContainer/SeedLineEdit" to="MainInterface/NoiseImageGenerator" method="_seed_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/AmplitudeContainer/AmplitudeSlider" to="MainInterface" method="_amplitude_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/FrequencyContainer/FrequencySlider" to="MainInterface" method="_frequency_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OctavesContainer/OctavesSlider" to="MainInterface" method="_octaves_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/PersistenceContainer/PersistenceSlider" to="MainInterface" method="_persistence_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/LacunarityContainer/LacunaritySlider" to="MainInterface" method="_lacunarity_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer/XSlider" to="MainInterface" method="_x_offset_changed"]
[connection signal="value_changed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/OffsetContainer/YSlider" to="MainInterface" method="_y_offset_changed"]
[connection signal="toggled" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/InvertedContainer/InvertedCheckBox" to="MainInterface/NoiseImageGenerator" method="_inverted_changed"]
[connection signal="pressed" from="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/SavePngContainer/SavePngButton" to="MainInterface" method="_save_button_pressed"]
[connection signal="pressed" from="MainInterface/HBoxContainer/TabContainer/Color/VBoxContainer/HBoxContainer/AddColorButton" to="MainInterface" method="_add_color_container"]

[editable path="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/NoiseTypeContainer"]
[editable path="MainInterface/HBoxContainer/TabContainer/Properties/HBoxContainer/VBoxContainer/SeedContainer"]
